--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,51 @@
-.App {
-  text-align: center;
+.calculator-container{    
+  border: 8px solid rgb(94, 91, 91);    
+  margin-top: 5rem;  
+  width: 400px;  
+  margin: 10% auto; 
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.input-display{  
+  border: 3px solid black;  
+  margin: 5px;  
+  border-radius: 3px;
+  width: 380px;
+  height: 50px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.total-display{    
+  border: 3px solid black;  
+  margin-left: 5px;  
+  margin-right: 5px;  
+  border-radius: 3px;
+  padding: 10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.buttons-container {  
+  padding: 10px;  
+  text-align: center;  
+  display: grid;    
+  grid-template-columns: repeat(3, 1fr);    
+  gap: 10px;    
+  width: 300px;  
+  margin: 0 auto;
 }
 
-.App-link {
-  color: #61dafb;
+.button{  
+  background-color: aqua;  
+  font-family: Arial, sans-serif;  
+  font-size: 18px;  
+  font-weight: bold;  
+  border-radius: 3px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.button:hover{
+  background-color: rgb(27, 160, 160);  
+  font-family: Arial, sans-serif;  
+  font-size: 18px;  
+  font-weight: bold;  
+  border-radius: 3px;
+  cursor: pointer;
 }
+
+
